apps/import-api.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: acta-import-api
  annotations:
    # reinicia os pods quando o infisical atualizar os secrets
    secrets.infisical.com/auto-reload: "true"
  labels:
    app.kubernetes.io/name: acta-import-api
    app.kubernetes.io/part-of: acta

spec:
  replicas: 1
  revisionHistoryLimit: 1

  selector:
    matchLabels:
      app.kubernetes.io/name: acta-import-api

  template:
    metadata:
      labels:
        app.kubernetes.io/name: acta-import-api
        app.kubernetes.io/part-of: acta

    spec:
      containers:
        - name: acta-import-api
          image: ghcr.io/appacta/acta-import-api:sha-e0e3c18cdac42eb4abfe5a992d524a2efeb39f9c
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8000
              protocol: TCP

          startupProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            failureThreshold: 60

          readinessProbe:
            httpGet:
              path: /docs
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /docs
              port: http
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: acta-import-worker
  annotations:
    # reinicia os pods quando o infisical atualizar os secrets
    secrets.infisical.com/auto-reload: "true"
  labels:
    app.kubernetes.io/name: acta-import-worker
    app.kubernetes.io/part-of: acta

spec:
  replicas: 1
  revisionHistoryLimit: 1

  selector:
    matchLabels:
      app.kubernetes.io/name: acta-import-worker

  template:
    metadata:
      labels:
        app.kubernetes.io/name: acta-import-worker
        app.kubernetes.io/part-of: acta

    spec:
      containers:
        - name: acta-import-worker
          image: ghcr.io/appacta/acta-import-api:sha-e0e3c18cdac42eb4abfe5a992d524a2efeb39f9c
          imagePullPolicy: IfNotPresent
          command: ["python", "worker.py"]

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service

metadata:
  name: acta-import-api
  labels:
    app.kubernetes.io/name: acta-import-api
    app.kubernetes.io/part-of: acta

spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: acta-import-api

  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
